--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CHAUNL Portfolio</title>
+</head>
+<body>
+    <div>
+        <h1 style='margin: center'>Hello!</h1>
+        <h2>I'm Designer & Programmer</h2>
+    </div>
+    
+    
+</body>
+
+</html>
+
+
